<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:text="@string/label_contact_name"/>

        <EditText
            android:id="@+id/contact_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_contact_name"
            android:inputType="text|textAutoComplete|textAutoCorrect|textCapWords"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:text="@string/label_contact_email"/>

        <EditText
            android:id="@+id/contact_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_contact_email"
            android:inputType="textEmailAddress"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:text="@string/label_contact_tel"/>

        <EditText
            android:id="@+id/contact_tel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_contact_tel"
            android:inputType="phone"
            />

    </LinearLayout>

    <Button
        android:id="@+id/button_save_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="onClickSaveContact"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_new_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_contact"
            android:onClick="onClickNewContact"/>

        <Button
            android:id="@+id/button_remove_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            android:onClick="onClickRemoveContact"/>

        <Button
            android:id="@+id/button_cancel_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            android:onClick="onClickCancelContact"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/button_prev_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev"
            android:onClick="onClickPrevContact"/>

        <Button
            android:id="@+id/button_next_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:onClick="onClickNextContact"/>

    </LinearLayout>

</LinearLayout>
